start header and logo

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
+
+
+// HEADER
+header {
+    .logo {
+        img {
+            width: 70px;
+        }
+    }
+}
