--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,11 +1,27 @@
 @import '~bootstrap/scss/bootstrap';
 
-
 // HEADER
 header {
     .logo {
         img {
             width: 70px;
+        }
+    }
+
+    .my-list {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        height: 100%;
+        list-style: none;
+
+        li {
+            font-weight: 600;
+            cursor: pointer;
+
+            &:hover {
+                color: rgb(20, 90, 255);
+            }
         }
     }
 }
