--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -25,3 +25,24 @@ header {
         }
     }
 }
+
+//MAIN
+.jumbo {
+    width: 100%;
+    height: 400px;
+    background-image: url('../images/jumbotron.jpg');
+    background-size: cover;
+}
+
+.comic {
+    .comic-img {
+        img {
+            width: 200px;
+            height: 250px;
+        }
+    }
+
+    .comic-title {
+        color: white;
+    }
+}
