--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -61,6 +61,36 @@ header {
     }
 }
 
+//COMIC
+.bg-comic {
+    height: 80px;
+    background-color: rgb(20, 90, 255);
+
+    .thumb-comic {
+        position: relative;
+
+        .thumb-img {
+            position: absolute;
+            bottom: - 50px;
+
+            .thumb-type {
+                position: absolute;
+                padding: 0 10px;
+                background-color: rgb(20, 90, 255);
+                color: white;
+            }
+
+            img {
+                height: 300px;
+            }
+        }
+    }
+}
+
+.bg-specs {
+    background-color: rgb(238, 238, 238);
+}
+
 // FOOTER
 footer {
     background-image: url('../images/footer-bg.jpg');
